@@ -1532,8 +1532,9 @@ handle_getinfo_helper(control_connection_t *control_conn,
                                              strlen("unregistered-servers-"));
   } else if (!strcmp(question, "network-status")) {
     routerlist_t *routerlist = router_get_routerlist();
+    int verbose = control_conn->use_long_names;
     if (!routerlist || !routerlist->routers ||
-        list_server_status(routerlist->routers, answer) < 0) {
+        list_server_status(routerlist->routers, answer, verbose ? 2 : 1) < 0) {
       return -1;
     }
   } else if (!strcmp(question, "circuit-status")) {
